yamls/inti_container_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  containers:
    - name: myapp-container
      image: 'busybox:1.28'
      command:
        - sh
        - '-c'
        - echo The app is running! && sleep 3600
