yamls/pod_definition_args.yaml
apiVersion: v1
kind: Pod
metadata:
	name: ubuntu-sleeper-pod
spec:
	containers:
		- name: ubuntu-sleeper
		  image: ubuntu-sleeper
		  command: ["sleep2.0"] // corresponds to ENTRYPOINT command in docker
		  args: ["10"] // corresponds to CMD command in docker
